syntax = "proto3";
package blocks_proto;

service Blocks {
    rpc GetBlock (BlocksRequest) returns (BlockMsg);
    rpc GetBlocks (BlocksRequest) returns (stream BlockMsg);
}

message BlocksRequest {
  int64  height = 1;
  string hash = 2;
}

message BlockMsg {
    string id = 1;
    int64 height = 2;
    int64 version = 3;
    int64 timestamp = 4;
    int64 tx_count = 5;
    int64 size = 6;
    int64 weight = 7;
    string merkle_root = 8;
    string previousblockhash = 9;
    int64 mediantime = 10;
    int64 nonce = 11;
    int64 bits = 12;
    double difficulty = 13;
    string created_at = 14;
}
